fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,7 @@ form {
     border-right: 4px solid white;
     padding: 20px;
     overflow-y: scroll;
+    overflow-x: hidden;
 
     .todoList {
         display: flex;
